first page loads fine

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 <div class="menu-container">
   
       <div class="card-header col-md-10">
-          <h2> HELLO POST </h2>
+          <h2> Header on homepage handlebar </h2>
       </div>
 
   {{#each articles as |article|}}
