--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,15 +5,15 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BLOG</title>
-  <link rel="stylesheet" href="/css/jass.css">
-<link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/styles/jass.css">
+<link rel="stylesheet" href="/styles/style.css">
 </head>
 
 <body>
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
       <h1>
-        Crowdfunding Projects
+        Header on Main Handlebar
       </h1>
     </header>
       <main class="container container-fluid mt-5">
