--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
   <meta charset="UTF-8"/>
    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BLOG</title>
+  <title>TECH BLOG</title>
   <link rel="stylesheet" href="/styles/jass.css">
 <link rel="stylesheet" href="/styles/style.css">
 </head>
@@ -13,7 +13,7 @@
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
       <h1>
-        Header on Main Handlebar
+        The Tech Blog
       </h1>
     </header>
       <main class="container container-fluid mt-5">
