--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,6 +1,7 @@
 :root {
-    --primary: #389393;
-    --secondary: #f5a25d;
+   /* --primary: #67b4b4;*/
+    --primary: #6c6b67;
+    --secondary: #e2c0a4;
     --tertiary: #fa7f72;
     --quatrinary: #6c6b67;
     --light: #ebebeb;
@@ -127,7 +128,7 @@
   }
   
   .card-header {
-    color: var(--light);
+    color: var(--dark);
     margin: 0;
     background-color: var(--secondary);
     padding: 0.625rem;
