--- a/views/article.handlebars
+++ b/views/article.handlebars
@@ -1,24 +1,24 @@
 <div class="project-card">
         <div class="project-card-header">
-                {{project_name}}
+                {{title}}
         </div>
 
         <div class="card-body">
               <p>
-                      Description: {{project_description}}
+                      Description: {{text}}
              </p>
 
               <p>
                       Date Created: {{date_created}}
               </p>
-
+<!--
               {{#if needed_funding}}
               
-<!-- boolean field only -->
+ boolean field only 
               <p> 
                       Needed Funding
               </p>
-              {{/if}}
+              {{/if}}-->
 
   </div>
 </div>
