--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -24,8 +24,10 @@
                    {{article.text}}
              </section>
            
-          
-  
-
   {{/each}}
 </div> 
+
+  <button type="submit" class="btn btn-primary" id="submit-btn">
+          New Post
+  </button>
+    <a class="btn btn-primary" href="./form.handlebars" role="button">Write New Post</a>
