--- a/views/article.handlebars
+++ b/views/article.handlebars
@@ -21,4 +21,18 @@
               {{/if}}-->
 
   </div>
+
+  <form  id="the-form">
+          <input type="text" id="title"
+          placeholder="your post title" 
+          />
+
+          <input type="text" id="text"
+          placeholder="your post" 
+          />
+           <button type="submit" class="btn btn-primary" id="submit-btn">
+          Submit New Post - use enter instead
+</form>
+<!--<script src="/scripts/add-article.js"></script>-->
+
 </div>
