post route is updated

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -27,7 +27,7 @@
   {{/each}}
 </div> 
 
-  <button type="submit" class="btn btn-primary" id="submit-btn">
+ <!-- <button type="submit" class="btn btn-primary" id="submit-btn">
           New Post
   </button>
-    <a class="btn btn-primary" href="./form.handlebars" role="button">Write New Post</a>
+  -->
