--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,6 +15,7 @@
       <h1>
         The Tech Blog
       </h1>
+         <a class="btn btn-primary" href="./add-article" role="button">Write New Post</a>
     </header>
       <main class="container container-fluid mt-5">
         {{{ body }}}
