--- a/views/article.handlebars
+++ b/views/article.handlebars
@@ -21,7 +21,7 @@
               {{/if}}-->
 
   </div>
-
+<!--
   <form  id="the-form">
           <input type="text" id="title"
           placeholder="your post title" 
@@ -33,6 +33,6 @@
            <button type="submit" class="btn btn-primary" id="submit-btn">
           Submit New Post - use enter instead
 </form>
-<!--<script src="/scripts/add-article.js"></script>-->
+<script src="/scripts/add-article.js"></script>-->
 
 </div>
