--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,11 +15,10 @@
       <h1> The Tech Blog  </h1>
       <h2> Home </h2>
       <h2> Dashboard </h2>
-      <h2> Login </h2>
       <h2>  {{#if loggedIn}}
       <button id="logout" class="btn-no-style">Logout</button>
       {{else}}
-      <a href="/login">Login</a>
+      <a href="./login">Login</a>
       {{/if}}  </h2>
 
       <a class="btn btn-primary" href="./add-article" role="button">Write New Post</a> 
