--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -200,7 +200,7 @@
   
   .board {
     display:block;
-    border: solid 3px  var(--secondary);
+  /*  border: solid 3px  var(--primary-light);*/
     width: 100%;
   }
 
@@ -210,4 +210,43 @@
   color: var(--secondary);
   font-size: 2rem;
   margin: 0.625rem 0 0.25rem 0.3rem;
+}
+
+.card_title {
+  width: 100%;
+  height: 50px;
+  color: var(--dark);
+  margin: 0;
+  background-color: var(--light);
+  padding: 0.625rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+ /* border: 3px solid var(--primary);
+  border-radius: var(--border-radius);
+  border-style: solid;
+  border-width: medium;*/
+}
+
+.card_body{
+  background-color: white;
+  width: 100%;
+  height: 100px;
+  padding: 0.625rem;
+  /*border: 3px solid var(--primary);*/
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.card_category{
+  background-color: var(--primary);
+  width: 1500px;
+  color: var(--light);
+  text-align: right;
+}
+
+.strong {
+  font-weight: bolder
 }
