--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,6 +16,7 @@
       <h2> Home </h2>
       <h2> Dashboard </h2>
       <h2>  {{#if loggedIn}}
+      <a href="/hellopage">write a post</a> 
       <button id="logout" class="btn-no-style">Logout</button>
       {{else}}
       <a href="./login">Login</a>
