tidy up handlebars and routes

--- a/bbin/article.handlebars
+++ b/bbin/article.handlebars
@@ -1,15 +1,20 @@
 <div class="project-card">
+
+
+          <h1> I AN ARTICLE page</h1>
+
+
         <div class="project-card-header">
-                {{title}}
+                {{article.title}}
         </div>
 
         <div class="card-body">
               <p>
-                      Description: {{text}}
+                      Description: {{article.text}}
              </p>
 
               <p>
-                      Date Created: {{date_created}}
+                      Date Created: {{article.date_created}}
               </p>
 
 
