--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
       <h2> Home </h2>
       <h2> Dashboard </h2>
       <h2>  {{#if loggedIn}}
-      <button id="logout" class="btn-no-style">Logout</button>
+      <button id="logout" class="btn btn-primary">Logout</button>
       {{else}}
       <a href="./login">Login</a>
       {{/if}}  </h2>
