--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -8,7 +8,7 @@
     --dark: #182c23;
     --error: rgb(228, 46, 1);
     --border-radius: 0.3rem;
-    --ahoover: rgba(224, 122, 139, 0.781);
+    --login: rgba(224, 122, 139, 0.781);
   }
   
   body {
@@ -182,18 +182,20 @@
   .btn.btn-primary {
     background: var(--primary);
     color: var(--secondary);
-    border: 1px solid var(--ahoover);
+    border: 1px solid var(--login);
     font-size: 2rem;
     margin-left: 10px;
   }
 
-  a {
-    color: var(--ahoover);
+  a,
+  .btn-logout {
+    color: var(--login);
     text-decoration: none;
   }
   
-  a:hover {
-    color: var(--ahoover);
+  a:hover,
+  .btn-logout {
+    color: var(--login);
     text-decoration: underline;
   }
   
