--- a/views/hellopage.handlebars
+++ b/views/hellopage.handlebars
@@ -3,19 +3,16 @@
  {{#each categories as |category|}}
 
    
-     <p>    Post Category: 
-    {{category.category_name}}  </p>
+     <h3>Post Category: {{category.category_name}}</h3>
+        <button> explore {{category.category_name}}   </button>
+          <h5> articles for this category: </h5>
 
-  <p>    articles for this category: </p>
-      
-      
-      {{#each category.articles as |article_in_category|}}
-      <p>
-        {{article_in_category.title}}
-      </p>
-      {{/each}}
 
-    
+          {{#each category.articles as |article_in_category|}} 
+                  <p>{{article_in_category.title}}</p>
+          {{/each}}  
+
+
 
  {{/each}}
 
